# hades2-engine-interface

./: CMakeLists.txt  readme.md
hades2/: Entity.h  EntityManager.h  GameData.h  GameDataManager.h  IRenderComponent.h  MapThing.h  Player.h  PlayerManager.h  PlayerUnit.h  Thing.h  Unit.h  UnitData.h  UnitDataDef.h  UnitManager.h
include/hades2/: InputHandler.h
src/: HookTable.cpp  HookTable.h  HookedLua.h  allocator_forge_simple_impl.cpp
src/hades2/: Action.h  AnimationData.h  Assert.h  Color.h  ComponentAction.h  ComponentData.h  ComponentDataDef.h  EntityLinkedObject.h  GUIAction.h  GUIComponent.h  GUIComponentBox.h  GUIComponentButton.h  GUIComponentReflectionHelper.h  GUIComponentTextBox.h  GUIFlasher.h  GameDataManager.h  GameScreen.h  GuiComponentType.h  Handle.h  HashGuid.h  IGUIComponentContainer.h  IRectangle.h  IRenderComponent.h  Interact.h  LuaFunction.h  LuaTable.h  MainMenuScreen.h  MapThingDef.h  MenuScreen.h  Obstacle.h  ObstacleData.h  Player.h  PlayerManager.h  PlayerUnit.h  Projectile.h  Rectangle.h  ResourceDirectoryInfo.h  Resources.h  Rtii.h  Rtti.h  (+16 more)
